@@ -6,3 +6,9 @@ scl/loadbalancer/plugin.conf usr/share/syslog-ng/include/scl/loadbalancer/
 scl/osquery/plugin.conf usr/share/syslog-ng/include/scl/osquery/
 scl/windowseventlog/plugin.conf usr/share/syslog-ng/include/scl/windowseventlog/
 scl/windowseventlog/windowseventlog.xml usr/share/syslog-ng/include/scl/windowseventlog/
+scl/checkpoint/plugin.conf usr/share/syslog-ng/include/scl/checkpoint/
+scl/collectd/plugin.conf usr/share/syslog-ng/include/scl/collectd/
+scl/elasticsearch/elastic-http.conf usr/share/syslog-ng/include/scl/elasticsearch/
+scl/junos/plugin.conf usr/share/syslog-ng/include/scl/junos/
+scl/netskope/plugin.conf usr/share/syslog-ng/include/scl/netskope/
+scl/websense/plugin.conf usr/share/syslog-ng/include/scl/websense/
