@@ -6,6 +6,7 @@ syslog-ng (3.25.1-1) UNRELEASED; urgency=medium
   * Python3ify syslog-ng-mod-python (closes: #938618).
   * Add upstream persist-tool manpage.
   * Backport upstream bison update.
+  * Install all SCL files.
 
  -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Sat, 21 Dec 2019 08:42:10 +0000
 
